feat(module)增加内存抖动和内存泄漏范例

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,9 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".memory.MemorySharkActivity" />
+        <activity android:name=".memory.MemoryLeakActivity" />
+
 
         <service android:name="com.amap.api.location.APSService"></service>
 
