--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,4 +113,6 @@ dependencies {
 
     // A simple watchdog that detects Android ANRs
     implementation 'com.github.anrwatchdog:anrwatchdog:1.3.0'
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.4'
 }
